--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-.header {
-    color: violet; 
-  }
-  
+/* Corrected style.css */
+
+/* Fix indentation at line 2 */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Remove trailing whitespace at the end of line 2 */
+p {
+  color: red;
+}
+
+/* Add newline before closing brace at line 3 */
+p {
+  font-size: 16px;
+}
+
+/* Remove trailing whitespace at the end of line 4 */
+h1 {
+  font-weight: bold;
+}
+
+/* Add newline at the end of the file */
